2005-12-06  Kenichi Handa  <handa@m17n.org>

	* fontset.c (mfont__lookup_fontset): If only a fallback font is
	found, don't use it for more than one character.

2005-12-05  Kenichi Handa  <handa@m17n.org>

	* face.c (mface__realize): Set rfont->layouter to Mnil.
	(mface__for_chars): Fix handling of layouter.

	* character.h (mchar__define_prop): Extern it.

	* database.c (update_database_list): Call mchar__define_prop if
	necessary.

	* character.c (mchar__init): Don't call mchar_define_property.
	Instead just initialize property keys.
	(mchar__fini): Free char_prop_list only if it's not NULL.
	(mchar__define_prop): New function.
	(mchar_define_property): Call mchar__define_prop.

	* m17n-core.c (m17n_fini_core): Call mtext__prop_fini at after
	mplist__fini.

2005-12-02  Kenichi Handa  <handa@m17n.org>

	* language.c (mlang__init): Handle extra chars.

	* m17n-gui.h (mfont_check): Adjust prototype.

	* m17n-X.c (xfont_driver): Specify xfont_check_capability.
	(xfont_check_capability): New function.
	(xft_driver): Specify xft_check_capability.
	(xft_check_capability): New function.

	* font-ft.c (M0_3): Delete it.
	(M0): New variable.
	(ft_get_charmaps): Refer to M0.
	(fc_parse_pattern): Fix previous change.
	(ft_list_language): Check also extra chars.
	(ft_check_otf): Define it even if HAVE_OTF is undef.
	(ft_check_lang): Check the result of FcLangSetHasLang against
	FcLangDifferentLang.  Check also extra chars.
	(ft_list_capability): Delete ifdef HAVE_OTF.
	(ft_select): Likewise.
	(ft_open): Improve debug information.
	(ft_check_capability): New function.
	(mfont__ft_driver): Specify ft_check_capability.
	(mfont__ft_init): Initialize M0.

	* fontset.c (get_font_from_group): New function.
	(mfontset__get_font): New function.

	* fontset.h (mfontset__get_font): Extern it.

	* font.c (OTF_tag): Define it if HAVE_OTF is undef.
	(mfont__fini): Delete ifdef HAVE_OTF.
	(free_font_capability): Likewise.
	(mfont__get_capability): Likewise.